syntax = "proto3";

package todoPackage;

import "pj_enumerations.proto";

message voidNoParam {}

message TodoItem {
    int32 id = 1;
    string text = 2;
    todoPackage.IdofDevice devId = 3;
}

message TodoItems {
    repeated TodoItem items = 1;
}